--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.example.mynexus</groupId>
   <artifactId>my-first-app</artifactId>
   <packaging>jar</packaging>
-  <version>2.0-SNAPSHOT</version>
+  <version>3.0-SNAPSHOT</version>
   <name>my-first-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -18,11 +18,11 @@
   <distributionManagement>
 	<repository>
 		<id>nexus-releases</id> <name>Nexus Releases Repository</name>
-		<url>http://localhost:8081/repository/maven-releases/</url>
+		<url>http://127.0.0.1:8081/repository/maven-releases/</url>
 	</repository>
 	<snapshotRepository>
 		<id>nexus-snapshots</id> <name>Nexus Snapshots Repository</name>
-		<url>http://localhost:8081/repository/maven-snapshots/</url>
+		<url>http://127.0.0.1:8081/repository/maven-snapshots/</url>
 	</snapshotRepository>
   </distributionManagement>
 </project>
