--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.example.mynexus</groupId>
   <artifactId>my-first-app</artifactId>
   <packaging>jar</packaging>
-  <version>4.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <name>my-first-app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
